SERVER-11834 Remove lockType field from listCommands output